--- a/src/app/userSetting/goal/goal-condition/goal-condition.component.scss
+++ b/src/app/userSetting/goal/goal-condition/goal-condition.component.scss
@@ -20,7 +20,18 @@
     text-align: center;
     //border: 1px solid black;    
     z-index: 10;
+    position: relative;
 }
+// .condition-point::after{
+//     content: "";
+//     position: absolute;
+//     top: 15px;
+//     left: 20px;
+//     width: 50px;
+//     height: 0;
+//     border-top: 1px solid gray;
+//     z-index: 5;
+// }
 
 .background-arrow{   
     //margin: 0px 3px;
